# loraRatchetThesis

./: .gitignore  README.md
esp32/: README.md
esp32/as/: Cargo.toml
esp32/as/src/: edhoc.rs  main.rs
esp32/ed/: Cargo.toml
esp32/ed/src/: edhoc.rs  hrng.rs  main.rs  wifihandler.rs
esp32/esp32-benchmarks/: Cargo.toml  README.md  sdkconfig.defaults
esp32/esp32-benchmarks/src/: main.rs
esp32/local-experiment/: Cargo.toml
esp32/local-experiment/src/: edhoc.rs  hrng.rs  main.rs
esp32/single-experiment/: Cargo.toml
esp32/single-experiment/src/: edhoc.rs  hrng.rs  main.rs
raspberry/: README.md  buildSAMPLE.sh
raspberry/as/: Cargo.toml
raspberry/as/src/: edhoc.rs  filehandler.rs  generics.rs  lora_handler.rs  main.rs  phypayload_handler.rs
raspberry/ed/: Cargo.toml  keys.json
raspberry/ed/src/: edhoc.rs  generics.rs  lora_handler.rs  main.rs  phypayload_handler.rs  ratchet.rs
